them replycount, fix bug comment
